<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widget_bg"
    android:contentDescription="@string/widget_open_description"
    android:orientation="vertical"
    android:padding="@dimen/widget_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_title"
        android:textColor="@color/accent"
        android:textSize="@dimen/widget_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWidgetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:contentDescription="@string/widget_score_description"
        android:text="@string/widget_score_placeholder"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/widget_score"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/widget_open_description"
        android:textColor="@color/text_tertiary"
        android:textSize="@dimen/text_caption" />

</LinearLayout>
